<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.21"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterU"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="132dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5sp"
            android:textSize="20sp" />
</LinearLayout>

		<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.21"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterPIN"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="109dp"
            android:layout_height="34dp"
            android:layout_marginLeft="5sp"
            android:textSize="20dp" />

    	</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonNum1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num1" />

        <Button
            android:id="@+id/buttonNum2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num2" />

        <Button
            android:id="@+id/buttonNum3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonNum4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num4" />

        <Button
            android:id="@+id/buttonNum5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num5" />

        <Button
            android:id="@+id/buttonNum6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonNum7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num7" />

        <Button
            android:id="@+id/buttonNum8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num8" />

        <Button
            android:id="@+id/buttonNum9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonNumHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/numhash" />

        <Button
            android:id="@+id/buttonNum0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/num0" />

        <Button
            android:id="@+id/buttonNumdel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:text="@string/numDEL" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.41"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>