<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTxt_URL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chk" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="204dp"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/Izb1" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Izb2" />
    </RadioGroup>

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveS" />

</LinearLayout>