<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/buttonNum3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonNum2"
        android:layout_alignRight="@+id/buttonNum2"
        android:layout_below="@+id/buttonNum2"
        android:layout_marginTop="48dp"
        android:text="@string/opcija3" />

    <Button
        android:id="@+id/btn_getWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/btn1Click" />

    <Button
        android:id="@+id/buttonNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_getWeb"
        android:layout_alignRight="@+id/btn_getWeb"
        android:layout_below="@+id/btn_getWeb"
        android:layout_marginTop="40dp"
        android:text="@string/opcija2" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="66dp"
        android:layout_marginLeft="17dp"
        android:text="Nastavitve" />

</RelativeLayout>
